--- a/styles/index.css
+++ b/styles/index.css
@@ -110,6 +110,7 @@ input[type='text'], input[type='email'] {
     padding: var(--spacing-150) var(--spacing-300); 
     border: 1px solid var(--clr-grey-500);
     border-radius: var(--spacing-100);
+    height: 51px;
 }
 
 .over:hover, .over:focus {
